feat(3d): dessin de un cube dans le canvas réservé à la 3D

--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
 
             <div class="batiment-control">
                 <select name="batiments" id="select-bat">
-                    <option value="none">-- Batiment à éditer --</option>
+                    <option value="none"> -- Batiment à éditer -- </option>
                 </select>
-                <a href="#" class="minus-btn btn-off" id="delete-bat" title="Supprimer le batiment"><i class="fa fa-minus-square"></i></a>
+
+                <a href="#" class="minus-btn btn-off" id="delete-bat" title="Supprimer le batiment"><i class="fa fa-minus-square"></i>Supprimer</a>
             </div>
         </div>
     </div>
 
 
+    <script src="./three.js"></script>
+    <script src="./OrbitControls.js"></script>
     <script src="./script.js"></script>
 </body>
 
