feat (modele de batiment): Ajout de la fonctionnalité permettant d'ajouter les mur à l'interieur d'un batiment et à différent étage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <title>2D to 3D Map</title>
 </head>
 
@@ -27,14 +28,36 @@
         </div>
 
         <div class="control-panel">
-            <a href="#" class="btn" id="new-batiment">Nouveau batiment</a>
+
+            <div class="draw-control">
+                <h1 class="title">Que dessiner?</h1>
+                <label for="draw">Exterieur</label>
+                <input type="radio" name="draw" value="ext" checked = checked><br>
+
+                <label for="draw">Interieur</label>
+                <input type="radio" name="draw" value="int">
+            </div>
 
             <div class="batiment-control">
+                <h1 class="title">Batiments:</h1>
                 <select name="batiments" id="select-bat">
-                    <option value="none"> -- Batiment à éditer -- </option>
+                    <option value="none"> -- Sélectionnez un batiment -- </option>
                 </select>
+                <a href="#" class="btn" id="new-batiment"> <i class="fa fa-plus"></i> Ajouter</a>
+                <a href="#" class="btn" id="delete-bat" title="Supprimer le batiment"><i class="fa fa-minus"></i>
+                    Supprimer</a>
 
-                <a href="#" class="minus-btn btn-off" id="delete-bat" title="Supprimer le batiment"><i class="fa fa-minus-square"></i>Supprimer</a>
+            </div>
+
+            <div class="step-control no-display">
+                <h1 class="title">Etage:</h1>
+
+                <form class="radio-container">
+                </form>
+
+                <a href="#" class="btn" id="new-step"> <i class="fa fa-plus"></i> Ajouter</a>
+                <a href="#" class="btn" id="delete-step" title="Retirer un étage"><i class="fa fa-minus"></i>
+                    Supprimer</a>
             </div>
         </div>
     </div>
