refact (ihm): ajout de feedback après l'ajout et la suppression de batiment, changement de la couleur dans le 2D et amélioration de la présentation des endroits à dessiner

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
             <div class="draw-control">
                 <h1 class="title">Que dessiner?</h1>
-                <label for="draw">Exterieur</label>
-                <input type="radio" name="draw" value="ext" checked = checked><br>
+                <label for="draw">Murs Exterieur</label>
+                <input type="radio" name="draw" value="ext" checked = checked>
 
-                <label for="draw">Interieur</label>
+                <label for="draw">Mur Interieur</label>
                 <input type="radio" name="draw" value="int">
             </div>
 
