fix (api): Suppression du modèle Image et enregistrement du nom du fichier photo dans le modèle map

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <footer>
-        Copyright 2019 Nve Hounkponou Orphée Tous droit réservés
+        Copyright 2019 Nve Hounkponou Orphée
     </footer>
 
     <script src="./index.js"></script>
