refacto (app): Création d'une classe Batiment et d'une classe Map qui encapsule toute les opérations sur les cartes pour une meilleur lisibilité et une séparation du code métier et des vues

--- a/app.html
+++ b/app.html
@@ -6,84 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <title>2D to 3D Map</title>
+    <title>2D to 3D Map | En un clique passer de la 2D à la 3D</title>
 </head>
 
 <body>
 
     <header>
-        <h1><a href="./index.html">2D to 3D Map</a> <span id="map-name"></span></h1>
-        <div class="main-control">
+        <h1>2D to 3D</h1>
 
-            <a href="#" class="btn-link" title="enregistrer les modifications" id="save">
-                <i class="fa fa-save"></i> Enregistrer
-            </a>
-
-        </div>
+        <nav>
+            <a href="./index.html" class="button">Accueil</a>
+            <div class="button" id="save">Enregistrer</div>
+        </nav>
     </header>
 
     <div class="main-container">
         <div class="canvas-container">
-            <div class="canvas-2d-container" max-width="256px" max-height="256px">
+            <div class="canvas-2d-container canvas-container-item">
                 <canvas class="canvas-2d">
                 </canvas>
             </div>
 
-            <canvas class="canvas-3d">
+            <canvas class="canvas-3d canvas-container-item">
             </canvas>
         </div>
 
-        <div class="control-panel">
+        <div class="controls">
+
+            <div class="batiment-control">
+                <h1 class="title">Batiments</h1>
+                <select name="batiments" id="batiment-list" onchange="selectBatiment()">
+                    <option value="none"> -- Sélectionnez un batiment -- </option>
+                </select>
+                <div class="button" onclick="addBatiment()">Ajouter</div>
+                <div class="button" onclick="removeSelectedBatiment()">Retirer</div>
+            </div>
 
             <div class="draw-control">
                 <h1 class="title">Que dessiner?</h1>
-                <label for="draw">Murs Exterieur</label>
+                <label for="draw">Contour </label>
                 <input type="radio" name="draw" value="ext" checked=checked>
 
-                <label for="draw">Mur Interieur</label>
+                <label for="draw">Interieur </label>
                 <input type="radio" name="draw" value="int">
             </div>
 
-            <div class="batiment-control">
-                <h1 class="title">Batiments:</h1>
-                <select name="batiments" id="select-bat">
-                    <option value="none"> -- Sélectionnez un batiment -- </option>
-                </select>
-                <a href="#" class="btn" id="new-batiment"> <i class="fa fa-plus"></i> Ajouter</a>
-                <a href="#" class="btn" id="delete-bat" title="Supprimer le batiment"><i class="fa fa-minus"></i>
-                    Supprimer</a>
+            <div class="step-control">
+                <h1 class="title">Ascensseur:</h1>
 
-            </div>
-
-            <div class="step-control no-display">
-                <h1 class="title">Etage:</h1>
-
-                <form class="radio-container">
-                </form>
-
-                <a href="#" class="btn" id="new-step"> <i class="fa fa-plus"></i> Ajouter</a>
-                <a href="#" class="btn" id="delete-step" title="Retirer un étage"><i class="fa fa-minus"></i>
-                    Supprimer</a>
+                <div class="step">0</div>
+                <div class="step not-allow-step">1</div>
+                <div class="step not-allow-step">2</div>
+                <div class="step not-allow-step">3</div>
+                <div class="step not-allow-step">4</div>
+                <div class="step not-allow-step">5</div>
+                <span class="button" title="Ajouter un étage au batiment sélectionné" onclick="addStepOnSelectedBatiment()">Ajouter</span>
+                <span class="button" title="Supprimer le dernier étage du batiment sélectionné" onclick="removeLastStepOnSelectedBatiment()">Retirer</span>
             </div>
         </div>
 
-        <div class="modal">
-
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1>Dialogue</h1>
-                </div>
-                <h2>Vous venez de créer un nouveau batiment <br>
-                    <span><i class="fa fa-plus"></i> Batiment</span> </h2>
-            </div>
-        </div>
     </div>
 
     <script src="./three.js"></script>
     <script src="./OrbitControls.js"></script>
+    <script src="map.js"></script>
     <script src="./script.js"></script>
 </body>
 
