refac (app) : Amélioration de la lisibilité du code

--- a/app.html
+++ b/app.html
@@ -45,16 +45,15 @@
             <div class="draw-control">
                 <h1 class="title">Que dessiner?</h1>
                 <label for="draw">Contour </label>
-                <input type="radio" name="draw" value="ext" checked=checked>
-
+                <input type="radio" name="draw" value="0" checked=checked>
                 <label for="draw">Interieur </label>
-                <input type="radio" name="draw" value="int">
+                <input type="radio" name="draw" value="1">
             </div>
 
             <div class="step-control">
                 <h1 class="title">Ascensseur:</h1>
 
-                <div class="step">0</div>
+                <div class="step current">0</div>
                 <div class="step not-allow-step">1</div>
                 <div class="step not-allow-step">2</div>
                 <div class="step not-allow-step">3</div>
