--- a/app.html
+++ b/app.html
@@ -17,6 +17,7 @@
         <nav>
             <a href="./index.html" class="button">Accueil</a>
             <div class="button" id="save">Enregistrer</div>
+            <a href="./help.html" class="button">Aide</a>
         </nav>
     </header>
 
@@ -71,5 +72,6 @@
     <script src="map.js"></script>
     <script src="./script.js"></script>
 </body>
+
 
 </html>
