--- a/help.html
+++ b/help.html
@@ -99,7 +99,13 @@
 </div>
     <h1 id="about-app">A propos de 2D to 3D</h1>
 
-    <h1 id="about-author">A propos de l'auteur</h1>
+    <p>2D to 3D est une application web qui permet de dessiner numeriser une carte en 2D et d'obtenir la représentation en 3D de cette carte.
+        Les données de la carte son stocker dans une base de données, ce qui permet de y accéder via une API depuis une autre application.</p>
 
+    <h1 id="about-author">A propos de l'auteur</h1>
+    
+    <h2>Nve Hounkponou Orphé</h2>
+    <span>orpheenve@hotmail.com</span>
+    <span>+241 02 55 16 49</span>
 </body>
 </html>
